Fixed some security issues related to code insertion Added confirmation messages to every delete instruction Fixed a small redirection issue (admindashboard.html) Modified sql file to delete the user's library, posts and reviews when deleted

--- a/public/html/userprofile.html
+++ b/public/html/userprofile.html
@@ -128,11 +128,10 @@
         <div id="userPosts"></div>
         <div id="userReviews"></div>
       </div>
-
     </main>
   </div>
 
-  <script src="js/userprofile.js"></script>
+  <script src="/js/userprofile.js"></script>
 </body>
 
 </html>
